--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="drawer_open">Open</string>
     <string name="drawer_closed">Closed</string>
     <string name="bucket">Bucket</string>
+    <string name="length">Length</string>
+    <string name="short_n">short</string>
+    <string name="long_n">long</string>
 
     <string-array name="cloth_creator_steps">
         <item>CHOOSE CUT</item>
